# rust-lwm-backend

./: .env  .gitignore  API.md  Cargo.toml  DEPLOYMENT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  build.rs  schema.sql
client/: BUILD_STATUS.md  Cargo.toml  README.md  TESTING.md  build.rs
client/examples/: grpc_test.rs  http3_test.rs
client/src/: main.rs
proto/: service.proto
src/: auth.rs  cert.rs  config.rs  db.rs  firebase.rs  grpc.rs  health.rs  main.rs  metrics.rs  models.rs  rate_limit.rs  server.rs
