[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dotenv = "0.15.0"
jsonwebtoken = "10.2.0"
prost = "0.14.1"
rcgen = "0.14.5"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde_json = "1.0.145"
toasty = "0.1.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-quiche = "0.12.0"
tonic = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
