[package]
name = "lwm-client"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
quinn = "0.11.9"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"

[build-dependencies]
tonic-build = "0.14.2"
